fix: changed text alignment

--- a/styles/project/my-movies.module.scss
+++ b/styles/project/my-movies.module.scss
@@ -100,6 +100,7 @@
       padding: 0 0.5rem;
       max-width: fit-content;
       margin: 0 auto;
+      text-align: center;
     }
     span {
       margin-right: 0.2rem;
